# pydantic-gubbins

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
pydantic_gubbins/: __init__.py  main.py  typing.py
pydantic_gubbins/typing/: __init__.py  frozendict.py  madness.py  union.py
